--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,6 @@
+absl-py==0.12.0
+astunparse==1.6.3
+attrs==21.2.0
 autopep8==1.5.7
 bcrypt==3.2.0
 bigquery==0.0.13
@@ -5,9 +8,15 @@ cachetools==4.2.2
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+colorama==0.4.4
 cryptography==3.4.7
+cycler==0.10.0
 dacktool==0.0.7
 dbstream==0.1.0
+dialogflow==1.1.0
+docopt==0.6.2
+flatbuffers==1.12
+gast==0.4.0
 google-api-core==1.28.0
 google-api-python-client==1.7.11
 google-auth==1.30.0
@@ -17,22 +26,35 @@ google-cloud-bigquery==2.17.0
 google-cloud-bigquery-storage==2.4.0
 google-cloud-core==1.6.0
 google-crc32c==1.1.2
+google-pasta==0.2.0
 google-resumable-media==1.3.0
 googleapis-common-protos==1.53.0
 googleauthentication==0.0.15
-grpcio==1.38.0
+grpcio==1.34.1
+h5py==3.1.0
 httplib2==0.19.1
 idna==2.10
+iniconfig==1.1.1
+joblib==1.0.1
 kaggle==1.5.12
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
 libcst==0.3.19
+Markdown==3.3.4
+matplotlib==3.4.2
 mypy-extensions==0.4.3
-numpy==1.20.3
+numpy==1.19.5
 oauthlib==3.1.0
+opt-einsum==3.3.0
 packaging==20.9
 pandas==1.2.4
 paramiko==2.7.2
+Pillow==8.2.0
+pluggy==0.13.1
 proto-plus==1.18.1
 protobuf==3.17.0
+py==1.10.0
 pyarrow==4.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -40,6 +62,8 @@ pycodestyle==2.7.0
 pycparser==2.20
 PyNaCl==1.4.0
 pyparsing==2.4.7
+pytest==6.2.4
+pytest-watch==4.2.0
 python-dateutil==2.8.1
 python-slugify==5.0.2
 pytz==2021.1
@@ -47,12 +71,27 @@ PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
-six==1.16.0
+scikit-learn==0.24.2
+scipy==1.6.3
+seaborn==0.11.1
+six==1.15.0
+sklearn==0.0
 sshtunnel==0.1.5
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+tensorflow-hub==0.12.0
+termcolor==1.1.0
 text-unidecode==1.3
+threadpoolctl==2.1.0
 toml==0.10.2
 tqdm==4.60.0
-typing-extensions==3.10.0.0
+typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 uritemplate==3.0.1
 urllib3==1.26.4
+watchdog==2.1.2
+Werkzeug==2.0.1
+wrapt==1.12.1
